--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "parcel",
     "build": "parcel build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d src"
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
